--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,13 @@
 spring.application.name=InvestBetter
 server.port = 8080
+spring.cloud.gcp.credentials.location = ${sm://gcp_service_account}
+spring.cloud.gcp.project-id=lloyds-hack-grp-44
+
+spring.datasource.url=jdbc:postgresql://34.105.219.35/postgres?useSSL=false
+
+#spring.config.import=sm://
+spring.jpa.properties.hibernate.dialect : org.hibernate.dialect.PostgreSQLDialect
+spring.cloud.gcp.sql.database-name=postgres
+spring.cloud.gcp.sql.instance-connection-name=lloyds-hack-grp-44:europe-west2:hack-grp-44
+spring.datasource.username=postgres
+spring.datasource.password=hackgrp44
